# ReDict

./: .gitignore  CMakeLists.txt  README.md  apploader.cpp  main.cpp
