cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

set(PROJECT_NAME redict)
project(${PROJECT_NAME} 
    VERSION 0.1
    DESCRIPTION "The Redis replacement"
    LANGUAGES CXX
)

# Create binary file in root project directory
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Linux check
if (NOT CMAKE_SYSTEM_NAME STREQUAL "Linux")
  message(FATAL_ERROR "Linux only. Curr system: ${CMAKE_SYSTEM_NAME}")
endif()

# Set build type if not specified
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)
endif()

# Compiler flags for Debug and Release
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

add_executable(${PROJECT_NAME}
    main.cpp
)

message("the project: " ${PROJECT_NAME} " " "are ready for compiling")
